logo and footer

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/>
 </head>
 <body>
-
+<footer>
+</footer>
 </body>
 </html>
 
