--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html>
 <head>
 	<title></title>
-	<img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/>
+	<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
 </head>
 <body>
+	<h2>Products</h2>
+		<a href="https://gitaudit.careerbuilder.com/users/violators/">Name to be Decided Later - Violations</a>
+			<p>Description Here</p>
+		<a href="http://productstatus.careerbuilder.com/">Name to be Decided Later - Product Status</a>
+			<p>Description Here</p>
+		<a href="http://pi.careerbuilder.com/web/TeamPortal">Name to be Decided Later - Platform Integrity</a>
+			<p>Description Here</p>
 <footer>
 </footer>
 </body>
