--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>CareerBuilder</title>
+	<title>CareerBuilder Platform Integrity</title>
 	<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
 </head>
 <body>
