--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="file:///Users/atyson/platform-integrity-home-page/stylesheets/navigation.css">
 <head>
 	<title>CareerBuilder Platform Integrity</title>
 	<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
+	<ul>
+	   <li><a href="">1</a></li>
+	   <li><a href="">2</a></li>
+	   <li><a href="">3</a></li>
+	 </ul>
 </head>
 <body>
 	<h2>Products</h2>
