product name and div addition

--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="file:///Users/atyson/platform-integrity-home-page/stylesheets/navigation.css">
-<head>
-	<title>CareerBuilder Platform Integrity</title>
-	<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
-	<ul>
-	   <li><a href="">1</a></li>
-	   <li><a href="">2</a></li>
-	   <li><a href="">3</a></li>
-	 </ul>
-</head>
+<div>
+	<head>
+		<title>CareerBuilder Platform Integrity</title>
+			<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
+				<ul>
+	   				<li><a href="">1</a></li>
+	   				<li><a href="">2</a></li>
+	   				<li><a href="">3</a></li>
+	 			</ul>
+	</head>
+</div>
 <body>
 	<h2>Products</h2>
-		<a href="https://gitaudit.careerbuilder.com/users/violators/">Name to be Decided Later - Violations</a>
+		<a href="https://gitaudit.careerbuilder.com/users/violators/">GitAudit</a>
 			<p>Description Here</p>
-		<a href="http://productstatus.careerbuilder.com/">Name to be Decided Later - Product Status</a>
+		<a href="http://productstatus.careerbuilder.com/">Product Status</a>
 			<p>Description Here</p>
-		<a href="http://pi.careerbuilder.com/web/TeamPortal">Name to be Decided Later - Platform Integrity</a>
+		<a href="http://pi.careerbuilder.com/web/TeamPortal">Team Portal</a>
 			<p>Description Here</p>
 <footer>
 </footer>
