Test. Renamed elements of navi bar list. Developing list orientation in navigation.css.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 <link rel="stylesheet" type="text/css" href="file:///Users/atyson/platform-integrity-home-page/stylesheets/navigation.css">
-<div>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 			<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
+				<div class="navigation">
 				<ul>
-	   				<li><a href="">1</a></li>
-	   				<li><a href="">2</a></li>
-	   				<li><a href="">3</a></li>
+	   			<li><a href="">Home</a></li>
+	   				<li><a href="">About</a></li>
+	   				<li><a href="">Blog</a></li>
 	 			</ul>
+	 			</div>
 	</head>
-</div>
+
 <body>
 	<h2>Products</h2>
 		<a href="https://gitaudit.careerbuilder.com/users/violators/">GitAudit</a>
