Test. Navigation dropdown menu

--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 			<a href="file:///Users/mpalad/platform-integrity-home-page/index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
-				<div class="navigation">
+				<!--<div class="navigation">
 				<ul>
 	   			<li><a href="">Home</a></li>
 	   				<li><a href="">About</a></li>
 	   				<li><a href="">Blog</a></li>
 	 			</ul>
-	 			</div>
+	 			</div>-->
 	</head>
 
 <body>
+<div class="navigation">
+<button class="button">Navigation</button>
+<div class="pages">
+   <a href="">Home</a>
+   <a href="">About</a>
+   <a href="">Blog</a>
+   </div>
+   </div>
 	<h2>Products</h2>
 		<a href="https://gitaudit.careerbuilder.com/users/violators/">GitAudit</a>
 			<p>Description Here</p>
