description info pt 1

--- a/index.html
+++ b/index.html
@@ -24,9 +24,28 @@
    </div>
 	<h2>Products</h2>
 		<a href="https://gitaudit.careerbuilder.com/users/violators/">GitAudit</a>
-			<p>Description Here</p>
+			<p>It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies:</p>
+			<ul>
+					<li>It is required that you allow us to view your private, validated emails. </li>
+					<li>It is required that you must activate two factor authentication. (To learn more about 2FA, click <a href="https://help.github.com/articles/about-two-factor-authentication/">here</a>.)</li>
+					<li>It is required that your GitHub profile has your CareerBuilder email address.</li>
+					<li>It is required that you are an active employee.</li>
+			</ul>
+			<p>Click <a href="https://gitaudit.careerbuilder.com">here</a> for more information and to check your compliance with these policies.</p>
+
 		<a href="http://productstatus.careerbuilder.com/">Product Status</a>
-			<p>Description Here</p>
+			<p>This website provides a way to glance at how well CareerBuilder is doing with its performance on its products. We show and alert when when we go below threshold. We also show the duration of common paths in each product (e.g login on the US website).</p>
+			<p>Click <a href="http://productstatus.careerbuilder.com/">here</a> to view this page. </p>
+
+		<h4>Datastore</h4>
+			<p>Data store is a tracking tool used to track the activity of recruiters to help satisfy government audits. The tool collects data, which can used to generate a report for any given time frame and account. </p>
+			<p>The government program that runs this is called OFCCP. (Click <a href="https://www.dol.gov/ofccp/">here</a> for more information about OFCCP.)</p>
+			<p>To generate a report, click <a href="http://buzz.careerbuilder.com/Resume/Resume/RDBDataStoreReport.aspx">here</a>.</p>
+
+		<h4>Source Control</h4>
+			<p>We manage the source control systems for most of CareerBuilder.</p>
+			<p>This is TFS for the matrix code (<a href="http://tfs.careerbuilder.com:8080/tfs/web">http://tfs.careerbuilder.com:8080/tfs/web</a>) and GitHub for newer off-matrix code (<a href="https://github.com/cbdr">https://github.com/cbdr</a>).</p>
+
 		<a href="http://pi.careerbuilder.com/web/TeamPortal">Team Portal</a>
 			<p>Description Here</p>
 <footer>
