description info pt 2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
    </div>
    </div>
 	<h2>Products</h2>
-		<a href="https://gitaudit.careerbuilder.com/users/violators/">GitAudit</a>
+		<h4>GitAudit</h4>
 			<p>It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies:</p>
 			<ul>
 					<li>It is required that you allow us to view your private, validated emails. </li>
@@ -33,7 +33,7 @@
 			</ul>
 			<p>Click <a href="https://gitaudit.careerbuilder.com">here</a> for more information and to check your compliance with these policies.</p>
 
-		<a href="http://productstatus.careerbuilder.com/">Product Status</a>
+		<h4>Product Status</h4>
 			<p>This website provides a way to glance at how well CareerBuilder is doing with its performance on its products. We show and alert when when we go below threshold. We also show the duration of common paths in each product (e.g login on the US website).</p>
 			<p>Click <a href="http://productstatus.careerbuilder.com/">here</a> to view this page. </p>
 
@@ -46,8 +46,24 @@
 			<p>We manage the source control systems for most of CareerBuilder.</p>
 			<p>This is TFS for the matrix code (<a href="http://tfs.careerbuilder.com:8080/tfs/web">http://tfs.careerbuilder.com:8080/tfs/web</a>) and GitHub for newer off-matrix code (<a href="https://github.com/cbdr">https://github.com/cbdr</a>).</p>
 
-		<a href="http://pi.careerbuilder.com/web/TeamPortal">Team Portal</a>
-			<p>Description Here</p>
+		<h4>Team Portal</h4>
+			<p>The products are test environment, the automated test environment, test deployment, and production deployment.
+			<p>We are responsible for deploying code hourly to the test environment efficiently, for the health of the test environment, and for driving the tests developer write via our automated test environment that runs any valid unit and browser tests and reports the results to developers.</p>
+			<p>You can view a summary and details of each test run on the <a href=" http://pi.careerbuilder.com/web/teamportal/">team portal page</a>.</p>
+			<p>This page shows you at a glance:</p>
+				<ul>
+					<li>which snapshot of code was deployed and tested successfully.</li>
+					<li>which set of code is the high water mark for what is currently in production.</li>
+					<li>which snapshot of code failed deployment or had failing tests.</li>
+					<li>links to details about what code or flag changesets are in each snapshot of code.</li>
+					<li>links to details about which tests failed and why.</li>
+					<li>data on which tests are problematic.</li>
+				</ul>
+
+		<h4>Production (and Test Deployment)</h4>
+			<p>We are responsible for deploying to the test environment hourly, and the production environment every business day.</p>
+			<p>To view the details of production deployments, click <a href="http://ghqpiblog.atl.careerbuilder.com/wp/deployment/">here</a>.</p>
+			<p>To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p>
 <footer>
 </footer>
 </body>
