img blur (background for search bar)

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
    <a href="">Blog</a>
    </div>
    </div>
+   <img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="500px" width="1125px" align="middle"/>
 	<h2>Products</h2>
 		<h4>GitAudit</h4>
 			<p>It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies:</p>
