Changed unordered list to <div> containing navigation links

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="file:///Users/atyson/platform-integrity-home-page/stylesheets/navigation.css">
+<link rel="stylesheet" type="text/css" href="./navigation.css">
 <link rel="stylesheet" type="text/css" href="file:///Users/mpalad/platform-integrity-home-page/stylesheets/styles.css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
@@ -8,14 +8,13 @@
 	</head>
 
 <body>
-<!--<div class="navigation">
-<button class="button">Navigation</button>
-<div class="pages">
-   <a href="">Home</a>
+   <div class="navigation">
+   <div class="button">
+   <a href="./index.html">Home</a>
    <a href="">About</a>
    <a href="">Blog</a>
    </div>
-   </div>-->
+   </div>
    <img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="500px" width="1125px" align="middle"/>
 	<h2>Products</h2>
 		<h4>GitAudit</h4>
