stylesheet html ./ change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="./navigation.css">
-<link rel="stylesheet" type="text/css" href="file:///Users/mpalad/platform-integrity-home-page/stylesheets/styles.css"/>
+<link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css">
+<link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 <a href="./index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
