live tile test pt 1

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css">
+<link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
+<link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles.css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 <a href="./index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
 	</head>
 
 <body>
+	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
+   <div class="container">
    <div class="navigation">
    <div class="button">
    <a href="./index.html">Home</a>
@@ -15,21 +18,15 @@
    <a href="">Blog</a>
    </div>
    </div>
-   <img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
-	<h2>Products</h2>
-		<h4>GitAudit</h4>
-			<p>It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies:</p>
-			<ul>
-					<li>It is required that you allow us to view your private, validated emails. </li>
-					<li>It is required that you must activate two factor authentication. (To learn more about 2FA, click <a href="https://help.github.com/articles/about-two-factor-authentication/">here</a>.)</li>
-					<li>It is required that your GitHub profile has your CareerBuilder email address.</li>
-					<li>It is required that you are an active employee.</li>
-			</ul>
-			<p>Click <a href="https://gitaudit.careerbuilder.com">here</a> for more information and to check your compliance with these policies.</p>
+   <ul>
+		<h2>Products</h2>
+			<li><h4>GitAudit</h4>
+				<p>It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies: It is required that you allow us to view your private, validated emails. It is required that you must activate two factor authentication. It is required that your GitHub profile has your CareerBuilder email address. It is required that you are an active employee. Click here for more information and to check your compliance with these policies.</p><a href="https://gitaudit.careerbuilder.com"><img src=""></a></li>
+				<li><p>To learn more about 2FA (two factor authentication), click here.</p><a href="https://help.github.com/articles/about-two-factor-authentication/"><img src=""></a></li>
 
-		<h4>Product Status</h4>
-			<p>This website provides a way to glance at how well CareerBuilder is doing with its performance on its products. We show and alert when when we go below threshold. We also show the duration of common paths in each product (e.g login on the US website).</p>
-			<p>Click <a href="http://productstatus.careerbuilder.com/">here</a> to view this page. </p>
+		<li><h4>Product Status</h4>
+			<p>This website provides a way to glance at how well CareerBuilder is doing with its performance on its products. We show and alert when we go below threshold. We also show the duration of common paths in each product (e.g login on the US website). Click here to view the page.</p>
+			<a href="http://productstatus.careerbuilder.com/"><img src=""></a></li>
 
 		<h4>Datastore</h4>
 			<p>Data store is a tracking tool used to track the activity of recruiters to help satisfy government audits. The tool collects data, which can used to generate a report for any given time frame and account. </p>
@@ -58,6 +55,8 @@
 			<p>We are responsible for deploying to the test environment hourly, and the production environment every business day.</p>
 			<p>To view the details of production deployments, click <a href="http://ghqpiblog.atl.careerbuilder.com/wp/deployment/">here</a>.</p>
 			<p>To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p>
+		</ul>
+		</div>
 <footer>
 </footer>
 </body>
