Changed navigation links to buttons

--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 	</head>
 
 <body>
-   <div class="navigation">
-   <div class="button">
-   <a href="./index.html">Home</a>
-   <a href="">About</a>
-   <a href="">Blog</a>
-   </div>
+   <div>
+   <button><a href="./index.html">Home</a></button>
+   <button><a href="#">About</a></button>
+   <button><a href="#">Blog</a></button>
    </div>
    <img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="500px" width="1125px" align="middle"/>
 	<h2>Products</h2>
