live tile test pt 2 (base)

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	</head>
 
 <body>
-   	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
-	  <div class="container">
 	   <button><a href="#">Blog</a></button>
 	   <button><a href="#">About</a></button>
 	   <button><a href="./index.html">Home</a></button>
+   	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
+	  <div class="container">
    <ul>
 		<h2>Products</h2>
 			<li><h4>GitAudit</h4>
@@ -24,33 +24,20 @@
 			<p>This website provides a way to glance at how well CareerBuilder is doing with its performance on its products. We show and alert when we go below threshold. We also show the duration of common paths in each product (e.g login on the US website). Click here to view the page.</p>
 			<a href="http://productstatus.careerbuilder.com/"><img src=""></a></li>
 
-		<h4>Datastore</h4>
-			<p>Data store is a tracking tool used to track the activity of recruiters to help satisfy government audits. The tool collects data, which can used to generate a report for any given time frame and account. </p>
-			<p>The government program that runs this is called OFCCP. (Click <a href="https://www.dol.gov/ofccp/">here</a> for more information about OFCCP.)</p>
-			<p>To generate a report, click <a href="http://buzz.careerbuilder.com/Resume/Resume/RDBDataStoreReport.aspx">here</a>.</p>
+		<li><h4>Datastore</h4>
+			<p>Data store is a tracking tool used to track the activity of recruiters to help satisfy government audits. The tool collects data, which can used to generate a report for any given time frame and account. To generate a report, click here.</p><a href="http://buzz.careerbuilder.com/Resume/Resume/RDBDataStoreReport.aspx"><img src=""></a></li>
+			<li><p>The government program that runs this is called OFCCP. (Click <a href="https://www.dol.gov/ofccp/">here</a> for more information about OFCCP.)</p><img src=""></li>
 
-		<h4>Source Control</h4>
-			<p>We manage the source control systems for most of CareerBuilder.</p>
-			<p>This is TFS for the matrix code (<a href="http://tfs.careerbuilder.com:8080/tfs/web">http://tfs.careerbuilder.com:8080/tfs/web</a>) and GitHub for newer off-matrix code (<a href="https://github.com/cbdr">https://github.com/cbdr</a>).</p>
+		<li><h4>Source Control</h4>
+			<p>We manage the source control systems for most of CareerBuilder. This is TFS for the matrix code (<a href="http://tfs.careerbuilder.com:8080/tfs/web">http://tfs.careerbuilder.com:8080/tfs/web</a>) and GitHub for newer off-matrix code (<a href="https://github.com/cbdr">https://github.com/cbdr</a>).</p><img src=""></li>
 
-		<h4>Team Portal</h4>
-			<p>The products are test environment, the automated test environment, test deployment, and production deployment.
-			<p>We are responsible for deploying code hourly to the test environment efficiently, for the health of the test environment, and for driving the tests developer write via our automated test environment that runs any valid unit and browser tests and reports the results to developers.</p>
-			<p>You can view a summary and details of each test run on the <a href=" http://pi.careerbuilder.com/web/teamportal/">team portal page</a>.</p>
-			<p>This page shows you at a glance:</p>
-				<ul>
-					<li>which snapshot of code was deployed and tested successfully.</li>
-					<li>which set of code is the high water mark for what is currently in production.</li>
-					<li>which snapshot of code failed deployment or had failing tests.</li>
-					<li>links to details about what code or flag changesets are in each snapshot of code.</li>
-					<li>links to details about which tests failed and why.</li>
-					<li>data on which tests are problematic.</li>
-				</ul>
+		<li><h4>Team Portal</h4>
+			<p>The products are test environment, the automated test environment, test deployment, and production deployment. We are responsible for deploying code hourly to the test environment efficiently, for the health of the test environment, and for driving the tests developer write via our automated test environment that runs any valid unit and browser tests and reports the results to developers. You can view a summary and details of each test run on the by clicking here.</p><a href=" http://pi.careerbuilder.com/web/teamportal/"><img src=""></a></li> 
 
-		<h4>Production (and Test Deployment)</h4>
-			<p>We are responsible for deploying to the test environment hourly, and the production environment every business day.</p>
-			<p>To view the details of production deployments, click <a href="http://ghqpiblog.atl.careerbuilder.com/wp/deployment/">here</a>.</p>
-			<p>To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p>
+			<li><p>This page shows you at a glance which snapshot of code was deployed and tested successfully, which set of code is the high water mark for what is currently in production, which snapshot of code failed deployment or had failing tests, the links to details about what code or flag changesets are in each snapshot of code, the links to details about which tests failed and why, and the data on which tests are problematic.</p><img src=""></li>
+
+		<li><h4>Production (and Test Deployment)</h4>
+			<p>We are responsible for deploying to the test environment hourly, and the production environment every business day. To view the details of production deployments, click <a href="http://ghqpiblog.atl.careerbuilder.com/wp/deployment/">here</a>. To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p><img src=""></li>
 		</ul>
 		</div>
 <footer>
