--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	</head>
 
 <body>
+	<button><a href="#">Blog</a></button>
+	<button><a href="#">About</a></button>
+	<button><a href="./index.html">Home</a></button>
    	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
 	  <div class="container">
 	   <button><a href="#">Blog</a></button>
