"search image" auto adjusts to specific resolutions

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 <a href="./index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
+<meta name="viewport" content="width=device-width">
 	</head>
 
 <body>
