Added search bar and changed navi colors

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 	<button><a href="#">About</a></button>
 	<button><a href="./index.html">Home</a></button>
    	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
+   	<form>
+   		<input type="text" name="search" placeholder="Search..">
+   	</form>
 	  <div class="container">
    <ul>
 		<h2>Products</h2>
