about page and logo fix

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles.css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
-<a href="./index.html"><img src="http://s3.amazonaws.com/blueb3/bbb/chicago/firms/tour/88004265/0/4408_small.jpg"/></a>
+<a href="./index.html"><img src="http://www.careerbuilder.com/assets/consumer_layouts/logo-eb9422713f74cd2ce626ee322e3af58d84e17f6ea2fa253abbee48639ff78ea5.svg" height="50" width="200" /></a>
 <meta name="viewport" content="width=device-width">
 	</head>
 
 <body>
 	<button><a href="#">Blog</a></button>
-	<button><a href="#">About</a></button>
+	<button><a href="./about.html">About</a></button>
 	<button><a href="./index.html">Home</a></button>
    	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
    	<form>
