about us temp info and minor fixes on bar

--- a/about.html
+++ b/about.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css"/>
+<link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
 <head>
 	<title>About Platform Integrity</title>
 	<a href="./index.html"><img src="http://www.careerbuilder.com/assets/consumer_layouts/logo-eb9422713f74cd2ce626ee322e3af58d84e17f6ea2fa253abbee48639ff78ea5.svg" height="50" width="200" /></a>
@@ -8,7 +10,12 @@
 	<button><a href="#">Blog</a></button>
 	<button><a href="./about.html">About</a></button>
 	<button><a href="./index.html">Home</a></button>
-	<h3>About</h3>
-		<p>insert info here</p>
+	
+	<h2>About Us</h2>
+	<ul>
+		<li>5550 A Peachtree Parkway</li>
+		<li>Suite 200</li>
+		<li>Norcross, GA 30092</li>
+	</ul>
 </body>
 </html>
