about search bar and info and live tile position

--- a/about.html
+++ b/about.html
@@ -10,12 +10,20 @@
 	<button><a href="#">Blog</a></button>
 	<button><a href="./about.html">About</a></button>
 	<button><a href="./index.html">Home</a></button>
+
+	<form>
+   		<input type="text" name="search" placeholder="Search..">
+   	</form>
 	
-	<h2>About Us</h2>
-	<ul>
-		<li>5550 A Peachtree Parkway</li>
-		<li>Suite 200</li>
-		<li>Norcross, GA 30092</li>
-	</ul>
+	<h2>About</h2>
+		<h4>About Us</h4>
+			<p>Insert Information Here.</p>
+		<h4>Location</h4>
+			<ul>
+				<li>5550 A Peachtree Parkway</li>
+				<li>Suite 200</li>
+				<li>Lower Level Floor</li>
+				<li>Norcross, GA 30092</li>
+			</ul>
 </body>
 </html>
