live tiles option 2 test

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles.css"/>
+<link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles(2).css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
 <a href="./index.html"><img src="http://www.careerbuilder.com/assets/consumer_layouts/logo-eb9422713f74cd2ce626ee322e3af58d84e17f6ea2fa253abbee48639ff78ea5.svg" height="50" width="200" /></a>
