--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" href="./stylesheets/navigation.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles(2).css"/>
 	<head>
 		<title>CareerBuilder Platform Integrity</title>
-<a href="./index.html"><img src="http://www.careerbuilder.com/assets/consumer_layouts/logo-eb9422713f74cd2ce626ee322e3af58d84e17f6ea2fa253abbee48639ff78ea5.svg" height="50" width="200" /></a>
+ 	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width">
 	</head>
 
 <body>
-	<button><a href="#">Blog</a></button>
-	<button><a href="./about.html">About</a></button>
-	<button><a href="./index.html">Home</a></button>
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="./index.html"><img src="http://www.careerbuilder.com/assets/consumer_layouts/logo-eb9422713f74cd2ce626ee322e3af58d84e17f6ea2fa253abbee48639ff78ea5.svg" height="50" width="200"/></a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Blog</a></li>
+      </ul>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
    	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
-   	<form>
-   		<input type="text" name="search" placeholder="Search..">
-   	</form>
 	  <div class="container">
    <ul>
 		<h2>Products</h2>
