Beginning stages of Jumbotron feature

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-   	<img src="http://www.underconsideration.com/brandnew/archives/CareerBuilder_sign.jpg" height="600px" width="1425px" align="middle"/>
+<div class="jumbotron">
+    <h1 class="animated fadeInDown">Product Integrity</h1>
+</div>
 	  <div class="container">
    <ul>
 		<h2>Products</h2>
