--- a/about.html
+++ b/about.html
@@ -35,7 +35,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-	
+<div class="jumbotron">
+    <h1 class="animated fadeInDown">Product Integrity</h1>
+</div>
 	<h2>About</h2>
 		<h4>About Us</h4>
 			<p>Insert Information Here.</p>
