Fixed footer styling and added footer to about page

--- a/about.html
+++ b/about.html
@@ -48,5 +48,8 @@
 				<li>Lower Level Floor</li>
 				<li>Norcross, GA 30092</li>
 			</ul>
+<footer>
+  <p>&copy; 2016 CareerBuilder, LLC. All rights reserved.</p>
+</footer>
 </body>
 </html>
