--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/styles.css"/>
 <meta name="viewport" content="width=device-width">
 <head>
+	<link rel="shortcut icon" href="images/CBIcon.png" type="favicon/png" />
 	<title>About Platform Integrity</title>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
