--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles.css"/>
 <link rel="stylesheet" type="text/css" href="./stylesheets/liveTiles(2).css"/>
 	<head>
+    <link rel="shortcut icon" href="images/CBIcon.png" type="favicon/png" />
 		<title>CareerBuilder Platform Integrity</title>
  	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
