about info addition and fixed spacing

--- a/about.html
+++ b/about.html
@@ -47,14 +47,12 @@
 </div>
 	<h2>About</h2>
 		<h4>About Us</h4>
-			<p>Insert Information Here.</p>
+				<p>The Product Integrity team handles products that not only show how well the company is doing in accodance with the company's own products, but also has products that provide security and keeps track of certain activities. The team consists of five people: William Boatin, Ethan Latimer, Byron Long, Russell Baker, and Charles Kiser.</p>
 		<h4>Location</h4>
-			<ul>
-				<li>5550 A Peachtree Parkway</li>
-				<li>Suite 200</li>
-				<li>Lower Level Floor</li>
-				<li>Norcross, GA 30092</li>
-			</ul>
+				<p>5550 A Peachtree Parkway</p>
+				<p>Suite 200</p>
+				<p>Lower Level Floor</p>
+				<p>Norcross, GA 30092</p>
 <footer>
   <p>&copy; 2016 CareerBuilder, LLC. All rights reserved.</p>
 </footer>
