--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li><p><u><font size="6">Team Portal(cont.)</font></u> This page shows you at a glance which snapshot of code was deployed and tested successfully, which set of code is the high water mark for what is currently in production, which snapshot of code failed deployment or had failing tests, the links to details about what code or flag changesets are in each snapshot of code, the links to details about which tests failed and why, and the data on which tests are problematic.</p><img src="https://pbs.twimg.com/profile_images/641627230162972672/aLN_k7ch.png"></li>
 
         <li><p><u><font size="6">Production(and Test Deployment)</font></u> We are responsible for deploying to the test environment hourly, and the production environment every business day. To view the details of production deployments, click <a href="http://ghqpiblog.atl.careerbuilder.com/wp/deployment/">here</a>.</p><img src="https://pbs.twimg.com/profile_images/641627230162972672/aLN_k7ch.png"></li>
-        <li><p><u><font size="6">Production(and Test Development)(cont.)</font></u> To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p><img src="https://pbs.twimg.com/profile_images/641627230162972672/aLN_k7ch.png"></li>
+        <li><p><u><font size="6">Production(and Test Deployment)(cont.)</font></u> To view test deployments, click <a href="http://pi.careerbuilder.com/web/teamportal/">here</a>.</p><img src="https://pbs.twimg.com/profile_images/641627230162972672/aLN_k7ch.png"></li>
 
 		</ul>
 		</div>
