--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="./index.html">Home <span class="sr-only">(current)</span></a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="#">Blog</a></li>
+        <li><a href="http://ghqpiblog.atl.careerbuilder.com/">Blog</a></li>
       </ul>
       </ul>
       <form class="navbar-form navbar-left" role="search">
