Added About page info to Homepage

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="./index.html">Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="./about.html">About</a></li>
         <li><a href="http://ghqpiblog.atl.careerbuilder.com/">Blog</a></li>
       </ul>
       </ul>
@@ -40,9 +39,16 @@
   </div><!-- /.container-fluid -->
 </nav>
 <div class="jumbotron">
-    <h1 class="animated fadeInDown">Product Integrity</h1>
+    <h1 class="animated fadeInDown">Platform Integrity</h1>
 </div>
-	  <div class="container">
+<div class="container-fluid mission">
+    <div class="row">
+    <h3> <strong>Welcome to the Platform Integrity Team Homepage</strong> 
+    <br> The Platform Integrity team handles products that not only show how well the company is doing in accodance with the company's own products, but also has products that provide security and keeps track of certain activities.
+    <br> The team consists of five people: William Boatin, Ethan Latimer, Byron Long, Russell Baker, and Charles Kiser.</h3>
+</div>
+</div>
+<div class="container">
    <ul>
 		<h2>Products</h2>
         <li><p><u><font size="6">GitAudit</font></u> It is an application that monitors the members of our GitHub organizations. Whether the member is allowed to stay or not is determined by some expandable policies: It is required that you allow us to view your private, validated emails. It is required that you must activate two factor authentication. It is required that your GitHub profile has your CareerBuilder email address. It is required that you are an active employee. Click ><a href="https://gitaudit.careerbuilder.com">here</a>< for more information and to check your compliance with these policies.</p><img src="https://pbs.twimg.com/profile_images/641627230162972672/aLN_k7ch.png"></li>
