location in footer

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
 		</div>
 <footer>
   <p>&copy; 2016 CareerBuilder, LLC. All rights reserved.</p>
+  <h4><strong>Location</strong></h4>
+        <p>5550 A Peachtree Parkway</p>
+        <p>Suite 200</p>
+        <p>Lower Level Floor</p>
+        <p>Norcross, GA 30092</p>
 </footer>
 </body>
 </html>
