minor description edits

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div class="container-fluid mission">
     <div class="row">
     <h3> <strong>Welcome to the Platform Integrity Team Homepage</strong> 
-    <br> The Platform Integrity team handles products that not only show how well the company is doing in accodance with the company's own products, but also has products that provide security and keeps track of certain activities.
+    <br> The Platform Integrity team handles products that not only show how well the company is doing in accordance with the company's own products, but also has products that provide security and keep track of certain activities.
     <br> The team consists of five people: William Boatin, Ethan Latimer, Byron Long, Russell Baker, and Charles Kiser.</h3>
 </div>
 </div>
