--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 </div>
 	<h2>About</h2>
 		<h4>About Us</h4>
-				<p>The Product Integrity team handles products that not only show how well the company is doing in accodance with the company's own products, but also has products that provide security and keeps track of certain activities. The team consists of five people: William Boatin, Ethan Latimer, Byron Long, Russell Baker, and Charles Kiser.</p>
+				<p>The Product Integrity team handles products that not only show how well the company is doing in accordance with the company's own products, but also has products that provide security and keep track of certain activities. The team consists of five people: William Boatin, Ethan Latimer, Byron Long, Russell Baker, and Charles Kiser.</p>
 		<h4>Location</h4>
 				<p>5550 A Peachtree Parkway</p>
 				<p>Suite 200</p>
